<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CyanogenMod Installer</string>

    <string name="unsupported_title" product="tablet">Unsupported tablet</string>
    <string name="unsupported_title" product="default">Unsupported phone</string>
    <string name="unsupported_text" product="tablet">Sorry, your tablet is not currently supported by the CyanogenMod Installer.\n\nFor more information please check the <a href="http://wiki.cyanogenmod.org/w/CyanogenMod_Installer#Supported_Devices">supported device list</a>.\n\nYou may continue to prepare your tablet for installation at your own risk.</string>
    <string name="unsupported_text" product="default">Sorry, your phone is not currently supported by the CyanogenMod Installer.\n\nFor more information please check the <a href="http://wiki.cyanogenmod.org/w/CyanogenMod_Installer#Supported_Devices">supported device list</a>.\n\nYou may continue to prepare your phone for installation at your own risk.</string>
    <string name="continue_anyway">Continue Anyway</string>

    <string name="welcome">Welcome</string>
    <string name="intro" product="tablet">This app will assist you as you install the CyanogenMod experience. You will need a Windows PC running Vista or newer, and a USB cable.\n\nYour tablet will be factory reset during this process, so please ensure important data is backed up before continuing.</string>
    <string name="intro" product="default">This app will assist you as you install the CyanogenMod experience. You will need a Windows PC running Vista or newer, and a USB cable.\n\nYour phone will be factory reset during this process, so please ensure important data is backed up before continuing.</string>
    
    <string name="begin">Begin</string>
    <string name="open_developer_options">Continue</string>
    <string name="continue_on_windows">Continue installation in Windows</string>
    <string name="unplug_device" product="tablet">Unplug your tablet</string>
    <string name="unplug_device" product="default">Unplug your phone</string>

    <string name="enable_usb_help">To proceed, enable USB Debugging on the next screen as shown below.</string>
    <string name="enable_ptp_help">To proceed, enable Camera (PTP) on the next screen as shown below.</string>
    <string name="device_ready" product="tablet">Your tablet is now prepared for CyanogenMod installation. Visit the website below on your Windows PC to continue:</string>
    <string name="device_ready" product="default">Your phone is now prepared for CyanogenMod installation. Visit the website below on your Windows PC to continue:</string>
    <string name="device_ready_windows" product="tablet">Your tablet has been successfully detected by the CyanogenMod installer. Congratulations! To continue, return to the CyanogenMod Installer on your Windows PC and follow the instructions.</string>
    <string name="device_ready_windows" product="default">Your phone has been successfully detected by the CyanogenMod installer. Congratulations! To continue, return to the CyanogenMod Installer on your Windows PC and follow the instructions.</string>
    <string name="website_link" translatable="false">http://get.cm</string>
    <string name="unplug_device_instructions" product="tablet">Unplug your tablet from your computer to continue the installation process.\n\nDo not plug in your tablet again until prompted to by the Windows installer.</string>
    <string name="unplug_device_instructions" product="default">Unplug your phone from your computer to continue the installation process.\n\nDo not plug in your phone again until prompted to by the Windows installer.</string>

    <string name="disable_fast_boot_help">To proceed, please disable Fast Boot on the next screen as shown below.</string>

    <string name="i_agree">I Agree</string>
    <string name="warning">Warning!</string>
    <string name="disclaimer" product="tablet">DO NO TRANSLATE THIS YET: Installing CyanogenMod will completely replace your tablet\'s operating system, and in rare cases, this may cause your tablet to become nonfunctional.\n\nBut we\'ve worked very hard to make sure that the installation is as reliable and safe as possible.\n\nBy continuing, you understand the potential risks.</string>
    <string name="disclaimer" product="default">DO NO TRANSLATE THIS YET: Installing CyanogenMod will completely replace your phone\'s operating system, and in rare cases, this may cause your phone to become nonfunctional.\n\nBut we\'ve worked very hard to make sure that the installation is as reliable and safe as possible.\n\nBy continuing, you understand the potential risks.</string>
</resources>
