<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            style="@style/Title"
            android:text="@string/continue_on_windows"
            android:textSize="35sp" />

        <ImageView
            style="@style/ModSeparator" />

        <TextView
            style="@style/Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_ready"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="50dp"
            android:text="@string/website_link"
            android:textColor="@color/cyanogen_blue"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>