<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/welcome_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitEnd"
        android:src="@drawable/bg_welcome" />

    <Button
        android:id="@+id/begin"
        style="@style/ContinueButton"
        android:layout_marginBottom="30dp"
        android:text="@string/begin" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"/>

        <ImageView
            style="@style/ModSeparator" />

        <TextView
            android:id="@+id/welcome_text"
            style="@style/Body"
            android:text="@string/intro"
            android:paddingBottom="30dp" />

    </LinearLayout>
</RelativeLayout>